--- a/index.html
+++ b/index.html
@@ -5,175 +5,155 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>12 Bubbles</title>
 <style>
-html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: monospace; background:#0a0a0a; color:#fff; }
+html, body {
+  margin:0; padding:0; height:100vh; overflow:hidden;
+  font-family: monospace; background:#0a0a0a; color:#fff;
+  display:flex; justify-content:center; align-items:center;
+}
 
-/* Loading Screen */
-#loadingScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards;}
-@keyframes eyeGlow { 0%{opacity:0.2;text-shadow:none;} 50%{opacity:1;text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff;} 100%{opacity:0.2;text-shadow:none;} }
+/* --- LOADING SCREEN --- */
+#loadingScreen {
+  position: fixed; top:0; left:0; width:100%; height:100%;
+  background:#000; display:flex; justify-content:center; align-items:center;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center;
+  animation:eyeGlow 2s ease-in-out forwards;
+}
+@keyframes eyeGlow {
+  0% { opacity:0.2; text-shadow:none; }
+  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
+  100% { opacity:0.2; text-shadow:none; }
+}
 
-/* Buttons */
-button { font-size:28px; padding:15px 35px; margin:10px; border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
+/* --- BUTTONS --- */
+button {
+  font-size:28px; padding:15px 35px;
+  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+  border:none; border-radius:12px; color:#fff; font-weight:bold;
+  text-transform:uppercase; cursor:pointer;
+  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  margin:10px;
+}
+#pauseBtn { position:fixed; top:20px; right:20px; width:60px; height:60px; font-size:30px; }
 
-/* Home Screen */
-#homeScreen { display:flex; flex-direction:column; align-items:center; justify-content:center; position:fixed; top:0; left:0; width:100%; height:100%; z-index:1000; }
+/* --- INDEX --- */
+#indexPanel {
+  position:fixed; top:100%; left:0; width:100%; max-height:70%;
+  background:rgba(10,10,10,0.95); overflow-y:auto;
+  transition:top 0.5s ease; padding:20px; z-index:999;
+  box-shadow:0 -5px 30px #d166ff;
+}
+#indexPanel h2 { text-transform:uppercase; text-align:center; }
+#indexPanel .closeBtn {
+  position:absolute; top:10px; right:10px; font-size:28px; cursor:pointer; color:#fff;
+}
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center;
+  font-weight:bold; color:#fff; border:2px solid #d166ff;
+  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
+}
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+@keyframes float {0%{transform:translateY(0);} 100%{transform:translateY(-10px);}}
 
-/* Difficulty Selection */
-#diffSelection { display:none; flex-direction:column; align-items:center; justify-content:center; }
-
-/* Countdown & Score */
-#countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none; }
-#scoreContainer { position:fixed; top:10px; left:50%; transform:translateX(-50%); z-index:1001; text-align:center; display:none; }
+/* --- GAME UI --- */
+#countdown {
+  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+  font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
+  z-index:1001; display:none;
+}
+#scoreContainer {
+  position:fixed; top:20px; left:50%; transform:translateX(-50%);
+  z-index:1001; text-align:center; display:none;
+}
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
 #score { font-size:28px; color:#d166ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* Pause Button */
-#pauseBtn { position:fixed; top:10px; right:10px; z-index:1001; font-size:28px; padding:15px 20px; border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; display:none; }
+/* --- BUBBLES --- */
+.bubble {
+  width:80px; height:80px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center;
+  font-size:24px; font-weight:bold; color:#fff;
+  background:linear-gradient(135deg,#a044ff,#6a00f4);
+  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
+  position:absolute; cursor:pointer;
+}
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
+.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
+.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
+.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
+.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; }
+.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0,0 0 60px #f00; }
 
-/* Bubbles */
-.bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:24px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; }
+/* --- END SCREEN --- */
+#endScreen {
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
+  justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500;
+  text-align:center;
+}
+#endScreen button { margin-top:20px; }
 
-/* Index Panel */
-#indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
-#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
+/* --- DIFFICULTY --- */
+#difficultyScreen {
+  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+  display:none; flex-direction:column; align-items:center; z-index:1000;
+}
+#difficultyScreen button { margin:10px; }
 
-/* End Screen */
-#endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500; text-align:center; }
-
-/* Pause Screen */
-#pauseScreen { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:#fff; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:2000; }
-#pauseScreen div { margin-bottom:20px; text-align:center; }
+/* --- EASTER EGG --- */
+#easterEgg {
+  position: fixed; top: 0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.9); color:red; font-size:150px;
+  font-weight:bold; display:flex; justify-content:center; align-items:center;
+  z-index:2000; display:none; text-transform:uppercase; opacity:0;
+  animation:fadeShake 5s forwards;
+}
+@keyframes fadeShake {
+  0%{opacity:0; transform:translateX(0);}
+  10%{opacity:1; transform:translateX(-5px);}
+  20%{transform:translateX(5px);}
+  30%{transform:translateX(-5px);}
+  40%{transform:translateX(5px);}
+  50%{transform:translateX(-5px);}
+  60%{transform:translateX(5px);}
+  70%{transform:translateX(-5px);}
+  80%{transform:translateX(5px);}
+  90%{transform:translateX(-5px);}
+  100%{opacity:0; transform:translateX(0);}
+}
 </style>
 </head>
 <body>
 
-<div id="loadingScreen">Level 12 studio</div>
+<div id="loadingScreen">Level 12 Studio</div>
 
 <div id="homeScreen">
-  <button id="startBtn">START</button>
-  <button id="indexBtn">INDEX</button>
+  <button id="startBtn">Start</button>
+  <button id="indexBtn">Index</button>
 </div>
 
-<div id="diffSelection">
-  <button class="diffBtn" data-diff="easy">EASY</button>
-  <button class="diffBtn" data-diff="medium">MEDIUM</button>
-  <button class="diffBtn" data-diff="hard">HARD</button>
-  <button id="backBtn">BACK</button>
+<div id="difficultyScreen">
+  <button data-diff="1">Easy</button>
+  <button data-diff="1.5">Medium</button>
+  <button data-diff="2">Hard</button>
+  <button id="diffBack">Back</button>
 </div>
 
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <!-- index items -->
+  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Common:</span> +1 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Rare 0.25%:</span> Double score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Rare 1%:</span> +144 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawns 3 bubbles</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble teleports all</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Rare 1.5%:</span> Inverts screen +10 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant win (+999999999 score)</div></div>
 </div>
 
 <div id="countdown"></div>
 <div id="scoreContainer">
-  <div id="highscore">Highscore: 0</div>
-  <div id="score">Score: 0</div>
-  <div id="lives">Lives: 3</div>
-</div>
-<button id="pauseBtn">PAUSE</button>
-
-<div id="pauseScreen">
-  <div style="font-size:50px;">Game Paused</div>
-  <div id="currentScorePause" style="font-size:30px;">Score: 0</div>
-  <button id="continuePauseBtn">CONTINUE</button>
-  <button id="endGamePauseBtn">END GAME</button>
-</div>
-
-<div id="endScreen">
-  <div id="finalScoreText"></div>
-  <button id="continueBtn">CONTINUE</button>
-</div>
-
-<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
-
-<script>
-const loadingScreen = document.getElementById('loadingScreen');
-const homeScreen = document.getElementById('homeScreen');
-const diffSelection = document.getElementById('diffSelection');
-const startBtn = document.getElementById('startBtn');
-const indexBtn = document.getElementById('indexBtn');
-const backBtn = document.getElementById('backBtn');
-const diffBtns = document.querySelectorAll('.diffBtn');
-const indexPanel = document.getElementById('indexPanel');
-const closeBtn = document.querySelector('#indexPanel .closeBtn');
-const countdownEl = document.getElementById('countdown');
-const scoreContainer = document.getElementById('scoreContainer');
-const scoreEl = document.getElementById('score');
-const highscoreEl = document.getElementById('highscore');
-const livesEl = document.getElementById('lives');
-const pauseBtn = document.getElementById('pauseBtn');
-const pauseScreen = document.getElementById('pauseScreen');
-const currentScorePause = document.getElementById('currentScorePause');
-const continuePauseBtn = document.getElementById('continuePauseBtn');
-const endGamePauseBtn = document.getElementById('endGamePauseBtn');
-const endScreen = document.getElementById('endScreen');
-const finalScoreText = document.getElementById('finalScoreText');
-const popSound = document.getElementById('popSound');
-
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, paused=false, startTime, difficulty=1;
-
-// Loading screen
-window.addEventListener('load', ()=>{
-  setTimeout(()=>{
-    loadingScreen.style.display='none';
-    homeScreen.style.display='flex';
-  }, 2000);
-});
-
-// Home / Diff
-startBtn.addEventListener('click', ()=>{ homeScreen.style.display='none'; diffSelection.style.display='flex'; });
-backBtn.addEventListener('click', ()=>{ diffSelection.style.display='none'; homeScreen.style.display='flex'; });
-diffBtns.forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    difficulty = btn.dataset.diff==='easy'?1 : btn.dataset.diff==='medium'?1.5 : 2;
-    diffSelection.style.display='none';
-    startCountdown();
-  });
-});
-
-// Index panel
-indexBtn.addEventListener('click', ()=>{ indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; });
-closeBtn.addEventListener('click', ()=>{ indexPanel.style.top='100%'; startBtn.style.display='flex'; indexBtn.style.display='flex'; });
-document.addEventListener('click', e=>{
-  if(indexPanel.style.top==='30%' && !indexPanel.contains(e.target) && e.target!==indexBtn){
-    indexPanel.style.top='100%';
-    startBtn.style.display='flex'; indexBtn.style.display='flex';
-  }
-});
-
-// Pause button
-pauseBtn.addEventListener('click', ()=>{ if(gameRunning && !paused){ paused=true; currentScorePause.textContent="Score: "+score; pauseScreen.style.display='flex'; } });
-continuePauseBtn.addEventListener('click', ()=>{ paused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles); });
-endGamePauseBtn.addEventListener('click', ()=>{ paused=false; pauseScreen.style.display='none'; endGame(); });
-
-// Countdown
-function startCountdown(){
-  score=0; lives=3; bubbles=[]; gameRunning=true; paused=false; startTime=Date.now();
-  countdownEl.style.display='block';
-  let count=3; countdownEl.textContent=count;
-  const interval=setInterval(()=>{
-    count--;
-    if(count>0) countdownEl.textContent=count;
-    else{
-      clearInterval(interval);
-      countdownEl.style.display='none';
-      scoreContainer.style.display='block';
-      pauseBtn.style.display='block';
-      startGame();
-    }
-  },1000);
-}
-
-// Start game
-function startGame(){
-  spawnBubble();
-  requestAnimationFrame(updateBubbles);
-}
-
-// Bubbles, spawnSingleBubble, updateBubbles, endGame functions go here like v předchozím kódu, jen s kontrolou paused=true před spawnem a update
-</script>
-</body>
-</html>
+  <div id="highscore">Highscore: 0
