--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
-  font-family: monospace; background:#0a0a0a; color:#fff;
-  display:flex; justify-content:center; align-items:center;
+  font-family: monospace;
+  background-color:#0a0a0a;
+  color:#fff;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
+  text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
 }
 @keyframes eyeGlow {
@@ -24,54 +26,32 @@ html, body {
   100% { opacity:0.2; text-shadow:none; }
 }
 
-/* --- BUTTONS --- */
-button {
-  font-size:28px; padding:15px 35px;
+/* --- HOME SCREEN --- */
+#homeScreen, #diffScreen, #pauseScreen, #endScreen {
+  position: fixed; top:0; left:0; width:100%; height:100%;
+  display: flex; flex-direction: column; justify-content:center; align-items:center;
+  background: rgba(0,0,0,0.95); z-index:2000; display:none; color:#fff;
+}
+.homeBtn, .diffBtn, .pauseBtn, #continueBtn, #endGameBtn {
+  font-size:28px; padding:15px 35px; margin:10px;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  border:none; border-radius:12px; color:#fff; font-weight:bold;
-  text-transform:uppercase; cursor:pointer;
-  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
-  margin:10px;
+  border:none; border-radius:12px; color:#fff;
+  font-weight:bold; text-transform:uppercase;
+  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
-#pauseBtn { position:fixed; top:20px; right:20px; width:60px; height:60px; font-size:30px; }
+#pauseBtn {
+  position:fixed; top:20px; right:20px;
+  width:50px; height:50px; font-size:24px;
+}
 
-/* --- INDEX --- */
-#indexPanel {
-  position:fixed; top:100%; left:0; width:100%; max-height:70%;
-  background:rgba(10,10,10,0.95); overflow-y:auto;
-  transition:top 0.5s ease; padding:20px; z-index:999;
-  box-shadow:0 -5px 30px #d166ff;
-}
-#indexPanel h2 { text-transform:uppercase; text-align:center; }
-#indexPanel .closeBtn {
-  position:absolute; top:10px; right:10px; font-size:28px; cursor:pointer; color:#fff;
-}
-.indexItem { display:flex; align-items:center; margin:10px 0; }
-.indexItem .bubbleImg {
-  width:60px; height:60px; margin-right:15px; border-radius:50%;
-  display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #d166ff;
-  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
-}
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-@keyframes float {0%{transform:translateY(0);} 100%{transform:translateY(-10px);}}
-
-/* --- GAME UI --- */
-#countdown {
-  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
-  font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
-  z-index:1001; display:none;
-}
+/* --- Score / Lives --- */
 #scoreContainer {
   position:fixed; top:20px; left:50%; transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
-#highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#d166ff; }
-#lives { font-size:20px; color:#f00; margin-top:5px; }
+#highscore, #score, #lives { font-size:24px; margin:5px; }
 
-/* --- BUBBLES --- */
+/* --- Bubbles --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
@@ -87,43 +67,24 @@ button {
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0,0 0 60px #f00; }
 
-/* --- END SCREEN --- */
-#endScreen {
-  position:fixed; top:0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500;
-  text-align:center;
+/* --- Index Panel --- */
+#indexPanel {
+  position:fixed; top:100%; left:0; width:100%; max-height:70%; overflow-y:auto;
+  transition:top 0.5s ease; padding:20px; z-index:999;
+  background: rgba(10,10,10,0.95); box-shadow:0 -5px 30px #d166ff;
 }
-#endScreen button { margin-top:20px; }
-
-/* --- DIFFICULTY --- */
-#difficultyScreen {
-  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
-  display:none; flex-direction:column; align-items:center; z-index:1000;
+#indexPanel .closeBtn {
+  position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold;
 }
-#difficultyScreen button { margin:10px; }
-
-/* --- EASTER EGG --- */
-#easterEgg {
-  position: fixed; top: 0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); color:red; font-size:150px;
-  font-weight:bold; display:flex; justify-content:center; align-items:center;
-  z-index:2000; display:none; text-transform:uppercase; opacity:0;
-  animation:fadeShake 5s forwards;
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff;
+  border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
 }
-@keyframes fadeShake {
-  0%{opacity:0; transform:translateX(0);}
-  10%{opacity:1; transform:translateX(-5px);}
-  20%{transform:translateX(5px);}
-  30%{transform:translateX(-5px);}
-  40%{transform:translateX(5px);}
-  50%{transform:translateX(-5px);}
-  60%{transform:translateX(5px);}
-  70%{transform:translateX(-5px);}
-  80%{transform:translateX(5px);}
-  90%{transform:translateX(-5px);}
-  100%{opacity:0; transform:translateX(0);}
-}
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 </style>
 </head>
 <body>
@@ -131,29 +92,253 @@ button {
 <div id="loadingScreen">Level 12 Studio</div>
 
 <div id="homeScreen">
-  <button id="startBtn">Start</button>
-  <button id="indexBtn">Index</button>
+  <div>12 BUBBLES</div>
+  <button class="homeBtn" id="startGameBtn">START</button>
+  <button class="homeBtn" id="indexOpenBtn">INDEX</button>
+  <div id="homeHighscore">Highscore: 0</div>
 </div>
 
-<div id="difficultyScreen">
-  <button data-diff="1">Easy</button>
-  <button data-diff="1.5">Medium</button>
-  <button data-diff="2">Hard</button>
-  <button id="diffBack">Back</button>
+<div id="diffScreen">
+  <div>Select Difficulty</div>
+  <button class="diffBtn" data-diff="0.8">Easy</button>
+  <button class="diffBtn" data-diff="1">Normal</button>
+  <button class="diffBtn" data-diff="1.5">Hard</button>
+  <button class="diffBtn" id="diffBackBtn">Back</button>
 </div>
+
+<button id="pauseBtn">||</button>
 
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Common:</span> +1 score</div></div>
+  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Normal:</span> +1 score</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Rare 0.25%:</span> Double score</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Rare 1%:</span> +144 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawns 3 bubbles</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble teleports all</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawn 3 bubbles</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble pulls all bubbles</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Rare 1.5%:</span> Inverts screen +10 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant win (+999999999 score)</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant Win (+999,999,999 score)</div></div>
 </div>
 
-<div id="countdown"></div>
 <div id="scoreContainer">
-  <div id="highscore">Highscore: 0
+  <div id="highscore">Highscore: 0</div>
+  <div id="score">Score: 0</div>
+  <div id="lives">Lives: 3</div>
+</div>
+
+<div id="pauseScreen">
+  <div>Game Paused</div>
+  <div id="pauseScore">Current Score: 0</div>
+  <button id="continueBtn">Continue</button>
+  <button id="endGameBtn">End Game</button>
+</div>
+
+<div id="endScreen">
+  <div id="finalScoreText"></div>
+  <button id="endContinueBtn">Continue</button>
+</div>
+
+<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
+
+<script>
+let bubbles=[], score=0, highscore=0, lives=3, gameRunning=false, paused=false, difficulty=1, startTime;
+const loadingScreen=document.getElementById('loadingScreen');
+const homeScreen=document.getElementById('homeScreen');
+const diffScreen=document.getElementById('diffScreen');
+const startGameBtn=document.getElementById('startGameBtn');
+const indexOpenBtn=document.getElementById('indexOpenBtn');
+const indexPanel=document.getElementById('indexPanel');
+const indexCloseBtn=indexPanel.querySelector('.closeBtn');
+const pauseBtn=document.getElementById('pauseBtn');
+const pauseScreen=document.getElementById('pauseScreen');
+const continueBtn=document.getElementById('continueBtn');
+const endGameBtn=document.getElementById('endGameBtn');
+const scoreContainer=document.getElementById('scoreContainer');
+const scoreEl=document.getElementById('score');
+const livesEl=document.getElementById('lives');
+const highscoreEl=document.getElementById('highscore');
+const finalScoreText=document.getElementById('finalScoreText');
+const endContinueBtn=document.getElementById('endContinueBtn');
+const homeHighscore=document.getElementById('homeHighscore');
+const popSound=document.getElementById('popSound');
+
+// --- LOADING SCREEN ---
+window.addEventListener('load',()=>{
+  setTimeout(()=>{
+    loadingScreen.style.display='none';
+    homeScreen.style.display='flex';
+    homeHighscore.textContent="Highscore: "+highscore;
+  },2000);
+});
+
+// --- BUTTON LOGIC ---
+startGameBtn.addEventListener('click',()=>{ homeScreen.style.display='none'; diffScreen.style.display='flex'; });
+document.querySelectorAll('.diffBtn').forEach(btn=>{
+  btn.addEventListener('click',(e)=>{
+    if(e.target.id==='diffBackBtn'){ diffScreen.style.display='none'; homeScreen.style.display='flex'; return; }
+    difficulty=parseFloat(e.target.dataset.diff);
+    diffScreen.style.display='none';
+    startCountdown();
+  });
+});
+
+indexOpenBtn.addEventListener('click',(e)=>{
+  e.stopPropagation(); indexPanel.style.top='30%'; homeScreen.style.display='none';
+});
+indexCloseBtn.addEventListener('click',(e)=>{ e.stopPropagation(); closeIndex(); });
+document.body.addEventListener('click',()=>{ closeIndex(); });
+indexPanel.addEventListener('click',e=>e.stopPropagation());
+
+pauseBtn.addEventListener('click',()=>{ togglePause(); });
+window.addEventListener('blur',()=>{ if(gameRunning) pauseGame(); });
+continueBtn.addEventListener('click',()=>{ resumeGame(); });
+endGameBtn.addEventListener('click',()=>{ endGame(); });
+endContinueBtn.addEventListener('click',()=>{
+  endScreen.style.display='none';
+  homeScreen.style.display='flex';
+  homeHighscore.textContent="Highscore: "+highscore;
+});
+
+// --- INDEX CLOSE FUNCTION ---
+function closeIndex(){ if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; if(!gameRunning) homeScreen.style.display='flex'; } }
+
+// --- COUNTDOWN ---
+const countdownEl=document.createElement('div');
+document.body.appendChild(countdownEl);
+countdownEl.style.position='fixed';
+countdownEl.style.top='50%';
+countdownEl.style.left='50%';
+countdownEl.style.transform='translate(-50%,-50%)';
+countdownEl.style.fontSize='80px';
+countdownEl.style.color='#d166ff';
+countdownEl.style.textShadow='0 0 20px #d166ff,0 0 40px #a044ff';
+countdownEl.style.zIndex='1001';
+countdownEl.style.display='none';
+
+function startCountdown(){
+  countdownEl.style.display='block';
+  let count=3; countdownEl.textContent=count;
+  const interval=setInterval(()=>{
+    count--;
+    if(count>0) countdownEl.textContent=count;
+    else{
+      clearInterval(interval);
+      countdownEl.style.display='none';
+      scoreContainer.style.display='block';
+      pauseBtn.style.display='block';
+      startGame();
+    }
+  },1000);
+}
+
+// --- GAME LOGIC ---
+function startGame(){
+  score=0; lives=3; bubbles=[]; gameRunning=true; paused=false; startTime=Date.now();
+  scoreEl.textContent="Score: "+score;
+  livesEl.textContent="Lives: "+lives;
+  requestAnimationFrame(updateBubbles);
+  spawnBubble();
+}
+
+function togglePause(){ paused? resumeGame(): pauseGame(); }
+function pauseGame(){
+  paused=true; pauseScreen.style.display='flex';
+  document.getElementById('pauseScore').textContent="Current Score: "+score;
+}
+function resumeGame(){ paused=false; pauseScreen.style.display='none'; updateBubbles(); spawnBubble(); }
+
+// --- BUBBLES ---
+function spawnBubble(){
+  if(!gameRunning || paused) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120*difficulty;
+  const chance=Math.random();
+  const bubble=document.createElement('div');
+  bubble.classList.add('bubble');
+  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{
+    if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{ b.style.left=(bx-parseFloat(b.style.width)/2)+'px'; b.style.top=(by-parseFloat(b.style.height)/2)+'px'; });
+    }
+    else if(bubble.dataset.type==="invert"){ document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000); }
+    else if(bubble.dataset.type==="instawin"){ score+=999999999; }
+    else score++;
+
+    if(score>999999999) score=999999999;
+    scoreEl.textContent="Score: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Highscore: "+highscore; homeHighscore.textContent="Highscore: "+highscore; }
+  };
+
+  bubble.addEventListener('click',pop);
+  bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+  setTimeout(()=>{ if(!paused) spawnBubble(); }, 500);
+}
+
+function spawnSingleBubble(){
+  if(!gameRunning || paused) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120*difficulty;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{  
+    if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Score: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Highscore: "+highscore; homeHighscore.textContent="Highscore: "+highscore; }
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+  };
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+}
+
+function updateBubbles(){
+  if(!gameRunning || paused) return;
+  bubbles.forEach(bubble=>{
+    const top=parseFloat(bubble.style.top);
+    bubble.style.top=(top-parseFloat(bubble.dataset.speed))+'px';
+    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame(); }
+  });
+  if(!paused) requestAnimationFrame(updateBubbles);
+}
+
+function endGame(){
+  gameRunning=false; paused=false;
+  bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreContainer.style.display='none';
+  pauseBtn.style.display='none';
+  pauseScreen.style.display='none';
+  finalScoreText.textContent="Your Score: "+score;
+  endScreen.style.display='flex';
+}
+</script>
+</body>
+</html>
