--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@ html, body {
 }
 
 /* --- HOME SCREEN --- */
-#homeScreen, #difficultyScreen {
+#homeScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   display: none; flex-direction: column; justify-content: center; align-items: center;
   background:#0a0a0a; z-index:1000;
   font-family: monospace;
 }
-.homeTitle { font-size:50px; font-weight:bold; margin-bottom:40px; }
+.homeTitle { font-size:60px; font-weight:bold; margin-bottom:40px; }
 .btn {
   font-size:28px; padding:15px 35px; margin:10px;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase;
   cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
+#homeHighscore { margin-top:20px; font-size:28px; color:#ff0; }
 
 /* --- INDEX PANEL --- */
 #indexPanel {
@@ -55,6 +56,16 @@ html, body {
   position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer;
   color:#fff; font-weight:bold; z-index:1001;
 }
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center;
+  font-weight:bold; color:#fff; border:2px solid #d166ff;
+  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
+}
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
 /* --- GAME UI --- */
 #countdown {
@@ -70,9 +81,9 @@ html, body {
   z-index:1001; text-align:center; display:none;
   font-family: monospace;
 }
-#highscore { font-size:24px; color:#ff0; margin-bottom:5px; }
+#highscore { font-size:28px; color:#ff0; margin-bottom:5px; }
 #score { font-size:32px; color:#d166ff; }
-#lives { font-size:24px; color:#f00; margin-top:5px; }
+#lives { font-size:28px; color:#f00; margin-top:5px; }
 
 .bubble {
   width:80px; height:80px; border-radius:50%;
@@ -98,7 +109,7 @@ html, body {
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
 #pauseButton {
-  position:fixed; top:20px; right:20px; font-size:28px; padding:10px 15px;
+  position:fixed; top:20px; right:20px; font-size:28px; padding:15px 35px;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   border:none; border-radius:12px; color:#fff; cursor:pointer;
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1500;
@@ -163,7 +174,7 @@ html, body {
 
 <div id="endScreen">
   <div>Your Final Score: <span id="finalScoreText"></span></div>
-  <button id="btnRestart">Restart</button>
+  <button id="btnRestart">Back to Home</button>
 </div>
 
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
@@ -284,30 +295,6 @@ function spawnBubble(){
   setTimeout(spawnBubble,500);
 }
 
-function spawnSingleBubble(){
-  if(!gameRunning || pause) return;
-  const bubble=document.createElement('div');
-  bubble.classList.add('bubble');
-  bubble.textContent="12";
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=getSpeedByDifficulty();
-  document.body.appendChild(bubble);
-
-  const pop=()=>{  
-    if(!gameRunning || pause) return;
-    score++;  
-    if(score>highscore){ highscore=score; homeHighscore.textContent="High Score: "+highscore; highscoreEl.textContent="High Score: "+highscore; }
-    updateScoreUI();
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-  };
-  bubble.addEventListener('click',pop);
-  bubbles.push(bubble);
-}
-
 function getSpeedByDifficulty(){
   if(difficulty==="easy") return 1;
   if(difficulty==="normal") return 2;
@@ -366,9 +353,10 @@ function endGame(){
   endScreen.style.display='flex';
 }
 
+// --- RESTART ---
 btnRestart.addEventListener('click', ()=>{
   endScreen.style.display='none';
-  startCountdown();
+  homeScreen.style.display='flex';
 });
 </script>
 </body>
